Update the index page

--- a/index.html
+++ b/index.html
@@ -209,9 +209,11 @@
             <i class="fa-solid fa-rocket text-blue-600"></i> Ready in 2–6 weeks
           </div>
           <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold leading-tight">
-            Custom Solutions That <span class="gradient-text">Drive Real Business Growth</span>
+            We help small businesses replace <span class="gradient-text">Excel, WhatsApp & manual work</span>
           </h1>
-          <p class="mt-6 text-lg sm:text-xl text-slate-700 max-w-xl">
+          <p class="mt-6 text-lg sm:text-xl text-slate-700 max-w-xl">with simple reliable systems that save 10–30
+            hours/week and increase revenue.</p>
+          <p>
             From static sites to fully automated CRMs & workflows — we build tools that save time and generate revenue.
           </p>
           <div class="mt-10 flex flex-col sm:flex-row gap-4">
@@ -245,7 +247,7 @@
       <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
         <div class="bg-white p-8 rounded-2xl border card-hover shadow-premium flex flex-col">
           <i class="fa-solid fa-globe text-5xl text-blue-600 mb-6"></i>
-          <h3 class="text-2xl font-bold mb-3 gradient-text">Custom Websites</h3>
+          <h3 class="text-2xl font-bold mb-3 gradient-text">Inventory & stock panel for traders</h3>
           <p class="text-slate-600 flex-1">Dynamic, responsive sites with booking, payments & admin panels.</p>
         </div>
         <div class="bg-white p-8 rounded-2xl border card-hover shadow-premium flex flex-col">
@@ -255,12 +257,12 @@
         </div>
         <div class="bg-white p-8 rounded-2xl border card-hover shadow-premium flex flex-col">
           <i class="fa-solid fa-cogs text-5xl text-blue-600 mb-6"></i>
-          <h3 class="text-2xl font-bold mb-3 gradient-text">Custom CRM & Tools</h3>
-          <p class="text-slate-600 flex-1">Built-to-need CRMs, dashboards & internal systems.</p>
+          <h3 class="text-2xl font-bold mb-3 gradient-text">Lead & Customer Tracking System</h3>
+          <p class="text-slate-600 flex-1">No More Excel Chaos</p>
         </div>
         <div class="bg-white p-8 rounded-2xl border card-hover shadow-premium flex flex-col">
           <i class="fa-solid fa-plane-departure text-5xl text-blue-600 mb-6"></i>
-          <h3 class="text-2xl font-bold mb-3 gradient-text">Travel Automation</h3>
+          <h3 class="text-2xl font-bold mb-3 gradient-text">Automate tour bookings for travel businesses</h3>
           <p class="text-slate-600 flex-1">Bookings, itineraries, leads, invoices – fully automated.</p>
         </div>
       </div>
@@ -437,7 +439,7 @@
                   class="fa-solid fa-star text-yellow-400 text-2xl"></i>
               </div>
               <p class="italic text-slate-700 mb-6">"Completely transformed our travel operations – bookings & leads now
-                automated 24/7. Best decision!"</p>
+                automated 24/7. Saved 15 hours/week, Best decision!"</p>
               <p class="font-bold">Rahul Jain – Travel Agency Owner</p>
             </div>
           </div>
